Update Promotion Dashboard
Update add/remove product in Discount

--- a/deskover-dashboard-website/src/app/pages/promotion/promotion.component.html
+++ b/deskover-dashboard-website/src/app/pages/promotion/promotion.component.html
@@ -62,13 +62,13 @@
   <div class="modal-body">
     <div class="row">
       <div class="col col-md-6">
-        <table datatable [dtOptions]="dtAllProductOptions" class="table table-hover table-sm nowrap w-100">
+        <table datatable [dtOptions]="dtAllProductOptions" class="product-table table table-hover table-sm nowrap w-100">
           <thead class="table-primary"></thead>
           <tbody></tbody>
         </table>
       </div>
       <div class="col col-md-6">
-        <table datatable [dtOptions]="dtDiscountProductOptions" class="table table-hover table-sm nowrap w-100">
+        <table datatable [dtOptions]="dtDiscountProductOptions" class="product-table table table-hover table-sm nowrap w-100">
           <thead class="table-primary"></thead>
           <tbody></tbody>
         </table>
