--- a/deskover-dashboard-website/src/app/pages/product/product.component.html
+++ b/deskover-dashboard-website/src/app/pages/product/product.component.html
@@ -61,8 +61,9 @@
     </div>
   </div>
 </section>
+<!--<app-ckeditor></app-ckeditor>-->
 <!-- Modal -->
-<ng-template #productModal let-c="close" let-d="dismiss">
+<ng-template #productModal let-c="close" let-d="dismiss" tabindex="-1" data-bs-focus="false" >
   <div class="modal-header">
     <h4 class="modal-title text-primary" id="modal-basic-title">
       {{ isEdit ? 'Cập nhật' : 'Thêm' }} sản phẩm
@@ -87,10 +88,8 @@
           </div>
         </div>
         <div class="col-12 mb-3">
-          <label for="description" class="form-label">Mô tả</label>
-          <textarea class="form-control" id="description" rows="4" name="description"
-                    [(ngModel)]="product.description" #description="ngModel"></textarea>
-
+          <label class="form-label">Mô tả</label>
+          <app-ckeditor></app-ckeditor>
         </div>
       </div>
     </form>
