Update CKEditor config

--- a/deskover-dashboard-website/src/app/components/ckeditor/ckeditor.component.html
+++ b/deskover-dashboard-website/src/app/components/ckeditor/ckeditor.component.html
@@ -1,1 +1,1 @@
-<ckeditor [editor]="Editor" [config]="config" (ready)="onReady($event)"></ckeditor>
+<ckeditor [editor]="Editor" [id]="id" [(ngModel)]="bindingValue" [config]="config" (ready)="onReady($event)"></ckeditor>
