--- a/deskover-dashboard-website/src/app/pages/product/product.component.html
+++ b/deskover-dashboard-website/src/app/pages/product/product.component.html
@@ -89,7 +89,7 @@
         </div>
         <div class="col-12 mb-3">
           <label class="form-label">Mô tả</label>
-          <app-ckeditor></app-ckeditor>
+          <app-ckeditor [id]="'discount'" [bindingValue]="product.description"></app-ckeditor>
         </div>
       </div>
     </form>
