Update product entities

--- a/deskover-dashboard-website/src/app/components/ckeditor/ckeditor.component.html
+++ b/deskover-dashboard-website/src/app/components/ckeditor/ckeditor.component.html
@@ -1,1 +1,6 @@
-<ckeditor [editor]="Editor" [id]="id" [(ngModel)]="bindingValue" [config]="config" (ready)="onReady($event)"></ckeditor>
+<ckeditor
+  [editor]="Editor"
+  [id]="id"
+  [(ngModel)]="bindingValue"
+  [config]="config"
+></ckeditor> <!--(ready)="onReady($event)"-->
