Fix modal all component

--- a/deskover-dashboard-website/src/app/pages/product/product.component.html
+++ b/deskover-dashboard-website/src/app/pages/product/product.component.html
@@ -71,7 +71,7 @@
           {{ isEdit ? 'Cập nhật' : 'Thêm' }} sản phẩm
         </h4>
         <button type="button" class="btn-close close pull-right"
-                (click)="productModal.hide()" aria-label="Close">
+                (click)="closeModal()" aria-label="Close">
           <span aria-hidden="true" class="visually-hidden">&times;</span>
         </button>
       </div>
