--- a/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
@@ -52,8 +52,7 @@
 
       <div class="card-body p-0">
         <div class="table-responsive p-3">
-          <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"
-                 class="table table-hover table-sm nowrap w-100">
+          <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-hover table-sm nowrap w-100">
             <thead class="table-primary"></thead>
             <tbody></tbody>
           </table>
@@ -62,61 +61,73 @@
     </div>
   </div>
 </section>
-<!-- Modal - Start -->
-<div bsModal #subcategoryModal="bs-modal" class="modal fade" tabindex="-1" data-bs-focus="false"
-     role="dialog" aria-labelledby="subcategory-dialog-sizes">
-  <div class="modal-dialog modal-dialog-centered modal-md">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 id="subcategory-dialog-sizes" class="modal-title pull-left text-primary fw-bold">
-          {{ isEdit ? 'Cập nhật' : 'Thêm' }} danh mục
-        </h4>
-        <button type="button" class="btn-close close pull-right"
-                (click)="closeModal()" aria-label="Close">
-          <span aria-hidden="true" class="visually-hidden">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form #subcategoryForm="ngForm">
-          <div class="mb-3">
-            <label class="form-label" for="name">Tên</label>
-            <input type="text" class="form-control" id="name" name="name" [(ngModel)]="subcategoryDto.name"
-                   (keyup)="subcategoryDto.slug = toSlug(subcategoryDto.name)" #name="ngModel" required/>
-            <div class="invalid-feedback" *ngIf="name.invalid && (name.dirty || name.touched)">
-              <span *ngIf="name.errors?.['required']">Vui lòng nhập tên</span>
-            </div>
-          </div>
-          <div class="mb-3">
-            <label class="form-label" for="slug">Slug</label>
-            <input type="text" class="form-control" id="slug" name="slug" [(ngModel)]="subcategoryDto.slug"
-                   #slug="ngModel" required/>
-            <div class="invalid-feedback" *ngIf="slug.invalid && (slug.dirty || slug.touched)">
-              <span *ngIf="slug.errors?.['required']">Vui lòng nhập slug</span>
-            </div>
-          </div>
-          <div class="mb-3">
-            <label class="form-label" for="category">Danh mục cha</label>
-            <select id="category" class="custom-select" name="category" [(ngModel)]="subcategoryDto.categoryId"
-                    #category="ngModel" required>
-              <option *ngFor="let category of categories" [ngValue]="category.id">{{category.name}}</option>
-            </select>
-            <div class="invalid-feedback" *ngIf="category.invalid && (category.dirty || category.touched)">
-              <span *ngIf="category.errors?.['required']">Vui lòng chọn một danh mục</span>
-            </div>
-          </div>
-          <div class="mb-3">
-            <label for="description" class="form-label">Mô tả</label>
-            <textarea class="form-control" id="description" rows="4" name="description"
-                      [(ngModel)]="subcategoryDto.description" #description="ngModel"></textarea>
-
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-outline-primary" [disabled]="subcategoryForm.invalid"
-                (click)="saveSubcategory(subcategoryDto);">Lưu</button>
-      </div>
-    </div>
+<!-- Modal -->
+<ng-template #subcategoryModal let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title text-primary" id="modal-basic-title">
+      {{ isEdit ? 'Cập nhật' : 'Thêm' }} danh mục
+    </h4>
+    <button
+      type="button"
+      class="close"
+      aria-label="Close"
+      (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
-</div>
-<!-- Modal - End -->
+  <div class="modal-body">
+    <form #subcategoryForm="ngForm">
+      <div class="mb-3">
+        <label class="form-label" for="name">Tên</label>
+        <input
+          type="text"
+          class="form-control"
+          id="name"
+          name="name"
+          [(ngModel)]="subcategoryDto.name"
+          (keyup)="subcategoryDto.slug = toSlug(subcategoryDto.name)"
+          #name="ngModel"
+          required
+        />
+        <div class="invalid-feedback" *ngIf="name.invalid && (name.dirty || name.touched)">
+          <span *ngIf="name.errors?.['required']">Vui lòng nhập tên</span>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="slug">Slug</label>
+        <input
+          type="text"
+          class="form-control"
+          id="slug"
+          name="slug"
+          [(ngModel)]="subcategoryDto.slug"
+          #slug="ngModel"
+          required/>
+        <div class="invalid-feedback" *ngIf="slug.invalid && (slug.dirty || slug.touched)">
+          <span *ngIf="slug.errors?.['required']">Vui lòng nhập slug</span>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="category">Danh mục cha</label>
+        <select id="category" class="custom-select" name="category" [(ngModel)]="subcategoryDto.categoryId"
+                #category="ngModel" required>
+          <option *ngFor="let category of categories" [ngValue]="category.id">{{category.name}}</option>
+        </select>
+        <div class="invalid-feedback" *ngIf="category.invalid && (category.dirty || category.touched)">
+          <span *ngIf="category.errors?.['required']">Vui lòng chọn một danh mục</span>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="description" class="form-label">Mô tả</label>
+        <textarea class="form-control" id="description" rows="4" name="description"
+                  [(ngModel)]="subcategoryDto.description" #description="ngModel"></textarea>
+
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-primary" (click)="saveSubcategory(subcategoryDto); c('Save click')"
+            [disabled]="subcategoryForm.invalid">Lưu
+    </button>
+  </div>
+</ng-template>
