Update menu item

--- a/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -1,5 +1,5 @@
 <!-- Brand Logo -->
-<a [routerLink]="['/']" class="brand-link">
+<a [routerLink]="['/']" class="brand-link border-bottom-0">
     <img
         src="assets/images/logo/logo-icon.png"
         alt="Deskover"
@@ -7,7 +7,7 @@
         style="opacity: 0.8"
     />
     <span class="brand-text text-center">
-      <img src="assets/images/logo/logo.png" width="100" class="img-fluid" alt="logo">
+      <img src="assets/images/logo/logo.png" width="200" class="img-fluid" alt="logo">
     </span>
 </a>
 
