--- a/deskover-dashboard-website/src/app/pages/dashboard/dashboard.component.html
+++ b/deskover-dashboard-website/src/app/pages/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0 text-uppercase text-primary">Bảng điều khiển</h1>
+                <h1 class="m-0 fw-bold text-uppercase text-primary">Bảng điều khiển</h1>
             </div>
             <!-- /.col -->
             <div class="col-sm-6">
